Ugly test for ConcurrentModificationException when running with Java 17 #73